--- a/style/loginstyle.css
+++ b/style/loginstyle.css
@@ -1,3 +1,7 @@
+html{
+    height: 100%;
+    width: 100%;
+}
 body {
 	background-image: url(../assets/loginbackground.jpg);
 	background-attachment: fixed;
