Added modal to homepage

--- a/style/otherstyle.css
+++ b/style/otherstyle.css
@@ -33,4 +33,5 @@
 	font-family: 'Cinzel Decorative', serif;
 	/*font-family: 'Cinzel Decorative Black', serif;*/
 	/*font-family: 'Playball', serif;*/
+	/*font-family: serif;*/
 }
