Implemented SQL stoed proc in this commit

--- a/style/otherstyle.css
+++ b/style/otherstyle.css
@@ -35,3 +35,8 @@
 	/*font-family: 'Playball', serif;*/
 	/*font-family: serif;*/
 }
+
+/*.artistname {
+	font-family: 'Cinzel Decorative Black', serif;
+}
+*/
